@@ -59,9 +59,9 @@ static guint bread_crumb_item_signals[LAST_SIGNAL] = { 0 };
 
 static void hildon_bread_crumb_finalize (GObject *object);
 static void hildon_bread_crumb_set_property (GObject *object, guint prop_id,
-                                                  const GValue *value, GParamSpec *pspec);
+                                             const GValue *value, GParamSpec *pspec);
 static void hildon_bread_crumb_get_property (GObject *object, guint prop_id,
-                                                  GValue *value, GParamSpec *pspec);
+                                             GValue *value, GParamSpec *pspec);
 
 G_DEFINE_TYPE (HildonBreadCrumb, hildon_bread_crumb, GTK_TYPE_BUTTON)
 
@@ -133,7 +133,7 @@ hildon_bread_crumb_finalize (GObject *object)
 
 static void
 hildon_bread_crumb_set_property (GObject *object, guint prop_id,
-                                      const GValue *value, GParamSpec *pspec)
+                                 const GValue *value, GParamSpec *pspec)
 {
   HildonBreadCrumb *item = HILDON_BREAD_CRUMB (object);
 
@@ -153,7 +153,7 @@ hildon_bread_crumb_set_property (GObject *object, guint prop_id,
 
 static void
 hildon_bread_crumb_get_property (GObject *object, guint prop_id,
-                                      GValue *value, GParamSpec *pspec)
+                                 GValue *value, GParamSpec *pspec)
 {
   HildonBreadCrumb *item = HILDON_BREAD_CRUMB (object);
 
@@ -173,7 +173,7 @@ hildon_bread_crumb_get_property (GObject *object, guint prop_id,
 
 void
 hildon_bread_crumb_set_text (HildonBreadCrumb *item,
-                                  const gchar *text)
+                             const gchar *text)
 {
   HildonBreadCrumbPrivate *priv;
 
@@ -208,7 +208,7 @@ hildon_bread_crumb_get_text (HildonBreadCrumb *item)
 
 void
 hildon_bread_crumb_set_show_separator (HildonBreadCrumb *item,
-                                            gboolean show_separator)
+                                       gboolean show_separator)
 {
   HildonBreadCrumbPrivate *priv;
 
@@ -231,8 +231,8 @@ hildon_bread_crumb_set_show_separator (HildonBreadCrumb *item,
 
 void
 hildon_bread_crumb_get_natural_size (HildonBreadCrumb *item,
-                                          gint *natural_width,
-                                          gint *natural_height)
+                                     gint *natural_width,
+                                     gint *natural_height)
 {
   GtkRequisition req;
   gint width, height;
@@ -255,6 +255,7 @@ hildon_bread_crumb_get_natural_size (HildonBreadCrumb *item,
     *natural_width -= req.width;
   layout = gtk_widget_create_pango_layout (priv->label, priv->text);
   pango_layout_get_size (layout, &width, &height);
+  g_object_unref (layout);
 
   if (natural_width)
     *natural_width += PANGO_PIXELS (width);
